feat: Improve JVM defaults when running in Docker